package com.aguabolt.reservas.domain.models;

import jakarta.persistence.*;
import lombok.*;

import java.math.BigDecimal;
import java.util.ArrayList;
import java.util.List;

@Entity
@Table(name = "habitaciones")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Habitacion {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(unique = true, nullable = false)
    private String numero;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private EstadoHabitacion estado;

    @Column(nullable = false)
    private BigDecimal tarifa;

    @Column(nullable = false)
    private Integer tiempoXLimpieza; // Minutos definidos por residencial

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "residencial_id")
    private Residencial residencial;

    @OneToMany(mappedBy = "habitacion", cascade = CascadeType.ALL, orphanRemoval = true)
    @Builder.Default
    private List<FotoHabitacion> fotos = new ArrayList<>();
}
